--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -21,7 +21,6 @@
 
 .sidebar-container {
   margin: 0 auto;
-  margin-top: 3rem;
   color: $color-secondary-light;
   width: 90%;
   transition: $transition-ease;
